# Medgent

./: .gitignore  README.md  architecture.md
backend/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
backend/app/: api.py  db.py  main.py  models.py  schemas.py  worker.py
backend/app/core/: config.py  security.py
backend/app/services/: inference.py  medgemma.py  orchestrator.py  qc.py  rag.py  storage.py  workflow.py
backend/app/static/: index.html
backend/medgemma_server/: .env.example  README.md  pyproject.toml  server.py
backend/scripts/: e2e_real_model.sh
backend/tests/: conftest.py  test_health.py  test_workflow.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
